src/styles/hobo.css
/* Layout */

html {
  height: 100%;
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body {
  position: relative;
  margin: 0;
  padding-bottom: 6rem;
  min-height: 100%;
  font-family: "Helvetica Neue", Arial, sans-serif;
}

/**
 * Form
 */
button:disabled {
  color: lightgray
}


/**
 * Footer Styles
 */

.footer {
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  padding: 1rem;
  background-color: #efefef;
  text-align: center;
}

.mt1 {
  margin-top: 24px;
}

/**
 * Budget buttons
 */

button.budget-button {
  /*background-color: white;*/
  margin-right: 5px;
}

button.budget-button.selected {
  background-color: cyan;
}

button.delete {
  background-color: red;
}

